--- a/src/app/pages/public/changepasssuccess/changepasssuccess.page.html
+++ b/src/app/pages/public/changepasssuccess/changepasssuccess.page.html
@@ -9,7 +9,7 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 100px;">
-      <span class="setUp">Your Password has been </span>
+      <span class="setUp">Your Pincode has been </span>
       <br>
       <span class="setUp">Changed successfully </span>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
