--- a/src/app/pages/public/changepassword/changepassword.page.html
+++ b/src/app/pages/public/changepassword/changepassword.page.html
@@ -9,17 +9,17 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 25px;">
-      <p class="setUp">Set Up your new password</p>
+      <p class="setUp">Set Up your new pincode</p>
       <!-- form starts -->
       <form #changepassword="ngForm" name="changepassword" novalidate>
          <!-- for new password input -->
-        <input type="text" name="newPass" class="form-control" placeholder="New password" autocomplete="off"  required [ngClass]="{'is-invalid':newPass.invalid  && submitted  ,'is-valid': newPass.valid  && submitted }" #newPass="ngModel" ngModel [(ngModel)]="changePasswordObj.newPass" />
-        <show-error [control]="newPass" [label]="{'labelName': 'New password'}" [submitFlag]="submitted"></show-error>
+        <input type="text" name="newPass" class="form-control" placeholder="New pincode" autocomplete="off"  required [ngClass]="{'is-invalid':newPass.invalid  && submitted  ,'is-valid': newPass.valid  && submitted }" #newPass="ngModel" ngModel [(ngModel)]="changePasswordObj.newPass" />
+        <show-error [control]="newPass" [label]="{'labelName': 'New pincode'}" [submitFlag]="submitted"></show-error>
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || newPass.valid"></svg>
          <!-- for confirm password input -->
-        <input type="text" name="conPass" class="form-control" placeholder="Confirm password" autocomplete="off" required [ngClass]="{'is-invalid': 
+        <input type="text" name="conPass" class="form-control" placeholder="Confirm pincode" autocomplete="off" required [ngClass]="{'is-invalid': 
         conPass.invalid  && submitted  ,'is-valid': conPass.valid  && submitted }" #conPass="ngModel" ngModel [(ngModel)]="changePasswordObj.conPass" />
-        <show-error [control]="conPass" [label]="{'labelName': 'Confirm password'}" [submitFlag]="submitted"></show-error>
+        <show-error [control]="conPass" [label]="{'labelName': 'Confirm pincode'}" [submitFlag]="submitted"></show-error>
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || conPass.valid"></svg>
         <!-- for submit button -->
         <button (click)="onSubmit(changepassword)">Submit</button>
