--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -11,7 +11,7 @@
     <div class="column" style="text-align:center;padding-top: 25px;">
       <div class="bg-white">
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-        <p class="setUp">Forgot Password ?</p>
+        <p class="setUp">Forgot Pincode ?</p>
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
@@ -21,18 +21,24 @@
             ngModel [(ngModel)]="loginObj.phone" />
           <show-error [control]="phone" [label]="{'labelName': 'Phone Number'}" [submitFlag]="submitted"></show-error>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || phone.valid"></svg>
-          <!-- for  password input -->
-          
-          <input type="text" name="pass" class="form-control" placeholder="Password" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
-            [ngClass]="{'is-invalid': 
-          pass.invalid  && submitted  ,'is-valid': pass.valid  && submitted }" #pass="ngModel" ngModel
-            [(ngModel)]="loginObj.pass" />
-          <show-error [control]="pass" [label]="{'labelName': 'Password'}" [submitFlag]="submitted"></show-error>
-          <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || pass.valid"></svg>
+          <!-- for  Pincode input -->
+          <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
+          <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
+            <input type="text" id="digit-1" numbersOnly name="digit-1" data-next="digit-2" (ngModelChange)="click()" #digit1="ngModel" ngModel [(ngModel)]="loginObj.digit1"/>
+            <input type="text" id="digit-2" numbersOnly name="digit-2" data-next="digit-3" data-previous="digit-1"  #digit2="ngModel" ngModel [(ngModel)]="loginObj.digit2" (ngModelChange)="click()"/>
+            <input type="text" id="digit-3" numbersOnly name="digit-3" data-next="digit-4" data-previous="digit-2" #digit3="ngModel" ngModel [(ngModel)]="loginObj.digit3" (ngModelChange)="click()"/>
+            <input type="text" id="digit-4" numbersOnly name="digit-4" data-next="digit-5" data-previous="digit-3" #digit4="ngModel" ngModel [(ngModel)]="loginObj.digit4" (ngModelChange)="click()"/>
+            <input type="text" id="digit-5" numbersOnly name="digit-5" data-next="digit-6" data-previous="digit-4" #digit5="ngModel" ngModel [(ngModel)]="loginObj.digit5" (ngModelChange)="click()" />
+            <input type="text" id="digit-6" numbersOnly name="digit-6" data-previous="digit-5"  #digit6="ngModel" ngModel [(ngModel)]="loginObj.digit6"/>
+            <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
+              <span>Invalid OTP !</span>
+            </p>
+          </form>
+          <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <!-- for submit button -->
           <span class="notes">Enter the Mobile number you used to join </span><br>
           <span class="notes">Envia Major.You will get a text with a one-time</span><br>
-          <span class="notes">reference code to reset your password</span>
+          <span class="notes">reference code to reset your pincode</span>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" ></svg>
           <button (click)="onSubmit(loginform)">Continue</button>
         </form>
