--- a/src/app/pages/public/register/register.page.html
+++ b/src/app/pages/public/register/register.page.html
@@ -20,14 +20,14 @@
     <show-error [control]="phone" [label]="{'labelName': 'Phone Number'}" [submitFlag]="submitted"></show-error>
     <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || phone.valid"></svg>
          <!-- for new password input -->
-        <input type="text" name="newPass" class="form-control" placeholder="New password" autocomplete="off"  required [ngClass]="{'is-invalid': 
+        <input type="text" name="newPass" class="form-control" placeholder="New pincode" autocomplete="off"  required [ngClass]="{'is-invalid': 
         newPass.invalid  && submitted  ,'is-valid': newPass.valid  && submitted }" #newPass="ngModel" ngModel [(ngModel)]="registrationObj.newPass" />
-        <show-error [control]="newPass" [label]="{'labelName': 'New password'}" [submitFlag]="submitted"></show-error>
+        <show-error [control]="newPass" [label]="{'labelName': 'New pincode'}" [submitFlag]="submitted"></show-error>
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || newPass.valid"></svg>
          <!-- for confirm password input -->
-        <input type="text" name="conPass" class="form-control" placeholder="Confirm password" autocomplete="off" required [ngClass]="{'is-invalid': 
+        <input type="text" name="conPass" class="form-control" placeholder="Confirm pincode" autocomplete="off" required [ngClass]="{'is-invalid': 
         conPass.invalid  && submitted  ,'is-valid': conPass.valid  && submitted }" #conPass="ngModel" ngModel [(ngModel)]="registrationObj.conPass" />
-        <show-error [control]="conPass" [label]="{'labelName': 'Confirm password'}" [submitFlag]="submitted"></show-error>
+        <show-error [control]="conPass" [label]="{'labelName': 'Confirm pincode'}" [submitFlag]="submitted"></show-error>
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || conPass.valid"></svg>
         <!-- for submit button -->
         <button (click)="onSubmit(registerForm)">Submit</button>
