--- a/src/app/pages/public/changepassword/changepassword.page.html
+++ b/src/app/pages/public/changepassword/changepassword.page.html
@@ -9,7 +9,7 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 25px;">
-      <p class="setUp">Set Up your new pincode</p>
+      <p class="verify">Set Up your new pincode</p>
       <!-- form starts -->
       <form #changepassword="ngForm" name="changepassword" novalidate>
          <!-- for new password input -->
