--- a/src/app/pages/public/logout/logout.page.html
+++ b/src/app/pages/public/logout/logout.page.html
@@ -9,9 +9,9 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 100px;">
-      <span class="setUp">You have been successfully </span>
+      <span class="verify">You have been successfully </span>
       <br>
-      <span class="setUp">logged out </span>
+      <span class="verify">logged out </span>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <span class="forgot">Want to log back in ? <span (click)="logIn()" style="border-bottom: 2px solid #544629;">Click here</span></span>
