--- a/src/app/pages/public/thankyou/thankyou.page.html
+++ b/src/app/pages/public/thankyou/thankyou.page.html
@@ -9,9 +9,9 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 100px;">
-      <span class="setUp">Thank you for registering </span>
+      <span class="verify">Thank you for registering </span>
       <br>
-      <span class="setUp">with Envia Major </span>
+      <span class="verify">with Envia Major </span>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
