--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -1,3 +1,6 @@
+<style>body {background-color: blue;display: flex;align-items: center;justify-content: center;flex-direction: column;}
+  .digit-group > input {width: 30px;height: 37px;line-height: 50px;text-align: center;background-color: white;font-size: 20px;border-radius:8px;font-weight: 200;margin: 0 5px;color: #000009;border: 1px solid #979797;}
+  .prompt {margin-bottom: 20px;font-size: 20px;color: black;}</style>
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
@@ -11,11 +14,11 @@
     <div class="column" style="text-align:center;padding-top: 25px;">
       <div class="bg-white">
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-        <p class="setUp">Forgot Pincode ?</p>
+        <p class="verify">Forgot Pincode ?</p>
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text" name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text" numbersOnly name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
@@ -24,12 +27,12 @@
           <!-- for  Pincode input -->
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-            <input type="text" id="digit-1" numbersOnly name="digit-1" data-next="digit-2" (ngModelChange)="click()" #digit1="ngModel" ngModel [(ngModel)]="loginObj.digit1"/>
-            <input type="text" id="digit-2" numbersOnly name="digit-2" data-next="digit-3" data-previous="digit-1"  #digit2="ngModel" ngModel [(ngModel)]="loginObj.digit2" (ngModelChange)="click()"/>
-            <input type="text" id="digit-3" numbersOnly name="digit-3" data-next="digit-4" data-previous="digit-2" #digit3="ngModel" ngModel [(ngModel)]="loginObj.digit3" (ngModelChange)="click()"/>
-            <input type="text" id="digit-4" numbersOnly name="digit-4" data-next="digit-5" data-previous="digit-3" #digit4="ngModel" ngModel [(ngModel)]="loginObj.digit4" (ngModelChange)="click()"/>
-            <input type="text" id="digit-5" numbersOnly name="digit-5" data-next="digit-6" data-previous="digit-4" #digit5="ngModel" ngModel [(ngModel)]="loginObj.digit5" (ngModelChange)="click()" />
-            <input type="text" id="digit-6" numbersOnly name="digit-6" data-previous="digit-5"  #digit6="ngModel" ngModel [(ngModel)]="loginObj.digit6"/>
+            <input type="text" id="digit-1" numbersOnly name="digit-1" data-next="digit-2" (ngModelChange)="click()" autocomplete="off"  #digit1="ngModel" ngModel [(ngModel)]="loginObj.digit1"/>
+            <input type="text" id="digit-2" numbersOnly name="digit-2" data-next="digit-3" data-previous="digit-1" autocomplete="off"   #digit2="ngModel" ngModel [(ngModel)]="loginObj.digit2" (ngModelChange)="click()"/>
+            <input type="text" id="digit-3" numbersOnly name="digit-3" data-next="digit-4" data-previous="digit-2" autocomplete="off"   #digit3="ngModel" ngModel [(ngModel)]="loginObj.digit3" (ngModelChange)="click()"/>
+            <input type="text" id="digit-4" numbersOnly name="digit-4" data-next="digit-5" data-previous="digit-3" autocomplete="off"  #digit4="ngModel" ngModel [(ngModel)]="loginObj.digit4" (ngModelChange)="click()"/>
+            <input type="text" id="digit-5" numbersOnly name="digit-5" data-next="digit-6" data-previous="digit-4" autocomplete="off"   #digit5="ngModel" ngModel [(ngModel)]="loginObj.digit5" (ngModelChange)="click()" />
+            <input type="text" id="digit-6" numbersOnly name="digit-6" data-previous="digit-5" autocomplete="off"   #digit6="ngModel" ngModel [(ngModel)]="loginObj.digit6"/>
             <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
               <span>Invalid OTP !</span>
             </p>
