--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -11,11 +11,11 @@
     <div class="column" style="text-align:center;padding-top: 25px;">
       <div class="bg-white">
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-        <p class="setUp">Login</p>
+        <p class="verify">Login</p>
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text" name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text" numbersOnly name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
@@ -30,8 +30,8 @@
           </show-error>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || pass.valid"></svg>
           <!-- for submit button -->
-          <p><img src="assets/rocket.png" alt="Smiley face" width="26" height="26" align="top">  <span class="otherSet"  (click)="onSubmit(loginform)">Go</span></p>
-          <p class="forgot" (click)="forgotPassword()">Forgot Pincode</p>
+          <p><img src="assets/rocket.png" alt="Smiley face" width="26" height="26" align="top">  <span class="verify" style=" cursor: pointer;" (click)="onSubmit(loginform)">Go</span></p>
+          <p class="text20PxWith400" (click)="forgotPassword()">Forgot Pincode</p>
         </form>
         <!-- end of form -->
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
