--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -3,29 +3,38 @@
         <div class="columnHome"></div>
         <div class="columnHome">
                 <div id="mySidenav" class="sidenav" style="position: absolute;">
-                    <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="home()"><label
+                    <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="home()"><label
                         class="margin20" (click)="home()">Home</label></span>
                 <hr class="hr">
-                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"  (click)="sendMoney()"><label
+                <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="25" height="25" align="top"  (click)="sendMoney()"><label
                         class="margin20" (click)="sendMoney()">Send Money</label></span>
                 <hr class="hr">
-                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="transaction()"><label
+                <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="transaction()"><label
                         class="margin20" (click)="transaction()">Transactions</label></span>
                 <hr class="hr">
-                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="wallet()"><label
+                <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="25" height="25" align="top" (click)="wallet()"><label
                         class="margin20" (click)="wallet()">Manage Wallet</label></span>
                 <hr class="hr">
-                <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"><label
+                <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="25" height="25" align="top"><label
                         class="margin20" (click)="settings()">Settings</label></span>
                 <hr class="hr">
-                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18"  (click)="settings()" align="top" (click)="logOut()"><label
+                <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="25" height="25"  (click)="settings()" align="top" (click)="logOut()"><label
                         class="margin20" (click)="logOut()">Logout</label></span>
                     </div>
             <p><img src="assets/icon_ionic_md_menu.png" alt="" align="top" (click)="openNav()" style="cursor: pointer;padding-top: 5px">
                 &nbsp;
                 <span  class="otherSet_wel1">Welcome</span><span class="otherSet_wel2"> Strader</span></p>
+            
+            <p style="float: right;">
+                <button id="7day" style="cursor: pointer;width: 75px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
+                    ;border-radius: 55px;background-color: #ffc33f;margin-right: -34px;position: relative;border: 1px solid #ffc33f;cursor: pointer;"
+                    (click)="click7days()">7 Days</button>&nbsp;
+                <button id="30day" style="width: 96px;height: 22px;color: rgba(60, 60, 60, 1);font-size: 16px
+                    ;border-radius: 55px;background-color: #fff;text-align: end;border: 1px solid #ffc33f;cursor: pointer;"
+                    (click)="click30days()">30 Days</button>
+
+            </p>
             <br>
-            <div class="clear"></div>
             <p class="otherSet" style="margin-top: 35px;background: gainsboro;">17th Dec 2019</p>
             <div class="row" style="margin-top: 12px;">
                 <div style="width:12%">
@@ -35,17 +44,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$8564.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
             <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
@@ -57,17 +66,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$8564.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
             <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
@@ -79,17 +88,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$8564.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
             <p class="otherSet" style="margin-top: 35px;background: gainsboro;">18th Dec 2019</p>
@@ -101,17 +110,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$8564.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
             <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
@@ -123,17 +132,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$5545.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
             <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
@@ -145,17 +154,17 @@
                 </div>
                 <div class="div2">
                     <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code : 56464564646</span>
+                    <span class="span2">Reference Code : 564645646</span>
                 </div>
-                <div style="margin-left: 10px;width:6%">
-                    <img src="assets/Icon open-list.png" alt="" align="middle" style="margin-right: 10px;">
+                <div style="width:8%">
+                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
                 <div style="margin-left: 10px;width:20%">
-                    <span class="amount">235545.00</span>
+                    <span class="amount">$8564.00</span>
                     <span class="amount2">Success</span>
                 </div>
                 <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle" style="margin-right: 10px;">
+                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
             </div>
         </div>
